--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,4 @@
-﻿allure-pytest==2.14.2
-allure-python-commons==2.14.2
-allure-robotframework==2.14.3
-attrs==25.3.0
-beautifulsoup4==4.13.4
-behave==1.2.6
-certifi==2025.6.15
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-distlib==0.3.9
-enum34==1.1.10
-execnet==2.1.1
-filelock==3.18.0
-greenlet==3.2.2
-grpcio==1.73.1
-grpcio-tools==1.73.1
-h11==0.16.0
-idna==3.10
-iniconfig==2.1.0
-Jinja2==3.1.6
-lxml==5.4.0
-MarkupSafe==3.0.2
-mysql-connector==2.2.9
-natsort==8.4.0
-numpy==2.2.6
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==25.0
-pandas==2.2.3
-parse==1.20.2
-parse_type==0.6.4
-pipenv==2025.0.2
-platformdirs==4.3.8
-playwright==1.52.0
-pluggy==1.6.0
-protobuf==6.31.1
-pycparser==2.22
-pyee==13.0.0
-pyodbc==5.2.0
-PySocks==1.7.1
-pytest==8.3.5
-pytest-base-url==2.1.0
-pytest-html==4.1.1
-pytest-metadata==3.1.1
-pytest-playwright==0.7.0
-pytest-xdist==3.7.0
-python-dateutil==2.9.0.post0
-python-slugify==8.0.4
-pytz==2025.2
-requests==2.32.3
-robotframework==7.3.2
-robotframework-assertion-engine==3.0.3
-robotframework-browser==19.6.2
-robotframework-pythonlibcore==4.4.1
-robotframework-requests==0.9.7
-seedir==0.5.1
-selenium==4.34.1
-setuptools==80.9.0
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-text-unidecode==1.3
-trio==0.30.0
-trio-websocket==0.12.2
-typing_extensions==4.14.1
-tzdata==2025.2
-urllib3==2.5.0
-virtualenv==20.31.2
-websocket-client==1.8.0
-wrapt==1.17.2
-wsproto==1.2.0
+allure-robotframework
+robotframework
+robotframework-browser
+robotframework-request
